--- a/pages/ucionice.html
+++ b/pages/ucionice.html
@@ -31,7 +31,7 @@ tab sa informacijama o ucionicama i njihovim kapacitetima:
       <td><input type="text" class="form-control" ng-model="ucionica.u.ime[$index]" name="ime" placeholder= {{u.ime}} ></td>
       <td><input type="text" class="form-control" ng-model="ucionica.u.kapacitet[$index]" name="kapacitet" placeholder= {{u.kapacitet}} ></td>
       <td><input type="text" class="form-control" ng-model="ucionica.u.racunari[$index]" name="racunari" placeholder= {{u.racunari}} ></td>
-      <td><button type="submit" class="btn btn-primary" name="submit" ng-click="changeData()">Промени</button></td>
+      <td><button type="submit" class="btn btn-primary" name="submit" ng-click="submitData()"> Промени </button></td>
     </tr>
   </tbody>
 </table> 
