--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<script type="text/javascript" src="js/jquery-1.11.2.min.js"> </script>
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/index.js"></script>
+		<script type="text/javascript" src="js/controllers.js"></script>
 		
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/me.css">
@@ -22,11 +23,12 @@
 		<!-- TODO:: ng-show u zavisnosti od moda(asistent...) -->
 		<div id="tab-container">
 			<ul class="nav nav-pills nav-stacked" ng-init="tab=1">
-				<li ng-class="{active:tab===1}"><a href="#p1" ng-click="tab=1">Дежурства</a></li>
-				<li ng-class="{active:tab===2}"><a href="#p2" ng-click="tab=2">Инфо</a></li>
-				<li ng-class="{active:tab===3}"><a href="#p3" ng-click="tab=3">Нови корисник</a></li>
-				<li ng-class="{active:tab===4}"><a href="#p4" ng-click="tab=4">Ресет</a></li>
-				<li ng-class="{active:tab===5}"><a href="#p5" ng-click="tab=5">Учионице</a></li>
+				<li ng-class="{active:tab===1}"><a href="#p1" ng-click="tab=1">Почетна</a></li>
+				<li ng-class="{active:tab===2}"><a href="#p2" ng-click="tab=2">Дежурства</a></li>
+				<li ng-class="{active:tab===3}"><a href="#p3" ng-click="tab=3">Инфо</a></li>
+				<li ng-class="{active:tab===4}"><a href="#p4" ng-click="tab=4">Нови корисник</a></li>
+				<li ng-class="{active:tab===5}"><a href="#p5" ng-click="tab=5">Ресет</a></li>
+				<li ng-class="{active:tab===6}"><a href="#p6" ng-click="tab=6">Учионице</a></li>
 			</ul>
 		</div>
 		
