--- a/pages/info.html
+++ b/pages/info.html
@@ -1,42 +1,46 @@
 <!-- tab za opste informacije:
-	    • skolska godina: tekstualno polje
-	    • email adresa za kontakt zaposlenih u server sali: tekstualno polje
-	    • email adresa za kontakt zaposlenih u Jagicevoj: tekstualno polje
-	   -->
-	  <div class="forme_dezurstava">
-	    <p class="imenaFormi"> Опште информације </p>
-	    <form class="form-horizontal">
-	      <fieldset>
-<!-- 		<legend>Legend</legend> -->
-		
-		<div class="form-group">
-		  <label for="inputGod" class="col-lg-2 control-label">Школска година</label>
-		  <div class="col-lg-10">
-		    <input type="text" class="form-control" id="inputGod" placeholder="Школска година">
-		  </div>
-		</div>
-		
-		
-		<div class="form-group">
-		  <label for="inputEmailSS" class="col-lg-2 control-label">Мејл адреса сервер сале</label>
-		  <div class="col-lg-10">
-		    <input type="text" class="form-control" id="inputEmailSS" placeholder="Мејл адреса сервер сале">
-		  </div>
-		</div>
-		
-		<div class="form-group">
-		  <label for="inputEmailJ" class="col-lg-2 control-label">Мејл адреса Јагићева</label>
-		  <div class="col-lg-10">
-		    <input type="text" class="form-control" id="inputEmailJ" placeholder="Мејл адреса Јагићева">
-		  </div>
-		</div>
-		
-		<div class="form-group">
-		  <div class="col-lg-10 col-lg-offset-2">
-		    <button class="btn btn-default">Поништи</button>
-		    <button type="submit" class="btn btn-primary">Пошаљи</button>
-		  </div>
-		</div>
-	      </fieldset>
-	    </form>	
-	  </div> <!-- forme dezurstva -->
+  • skolska godina: tekstualno polje
+  • email adresa za kontakt zaposlenih u server sali: tekstualno polje
+  • email adresa za kontakt zaposlenih u Jagicevoj: tekstualno polje
+-->
+
+<!-- TODO: deaktiviraj submit dugme dok se ne popuni makar jedno polje forme -->
+
+<div class="forme_dezurstava">
+  <p class="imenaFormi"> Опште информације </p>
+  
+  <form class="form-horizontal" name="forminfo">
+    <fieldset>
+      <!-- <legend>Legend</legend> -->
+      
+      <div class="form-group">
+	<label for="godina" class="col-lg-2 control-label">Школска година</label>
+	<div class="col-lg-10">
+	  <input type="number" min="1900" class="form-control" name="godina" ng-model="infoData.godina" placeholder="Школска година">
+	</div>
+      </div>
+
+      <div class="form-group">
+	<label for="emailSS" class="col-lg-2 control-label">Мејл адреса сервер сале</label>
+	<div class="col-lg-10">
+	  <input type="email" class="form-control" name="emailSS" ng-model="infoData.emailSS" placeholder="Мејл адреса сервер сале">
+	</div>
+      </div>
+
+      <div class="form-group">
+	<label for="emailJ" class="col-lg-2 control-label">Мејл адреса Јагићева</label>
+	<div class="col-lg-10">
+	  <input type="email" class="form-control" name="emailJ" ng-model="infoData.emailJ" placeholder="Мејл адреса Јагићева">
+	</div>
+      </div>
+
+      <div class="form-group">
+	<div class="col-lg-10 col-lg-offset-2">
+	  <button type="reset" class="btn btn-default" ng-click="resetData()">Поништи</button>
+	  <button type="submit" class="btn btn-primary" ng-click="submitData()" ng-disabled="forminfo.$invalid">Пошаљи</button>
+	</div>
+      </div>
+    </fieldset>
+  </form>	
+
+</div> <!-- forme dezurstva -->
