--- a/pages/pocetna.html
+++ b/pages/pocetna.html
@@ -1,1 +1,8 @@
-<h3> Она јавна табела дежурстава... <h3>
+<div ng-controller="pocetnaControler">
+  <div class="forme_dezurstava">
+  
+    <h3> Она јавна табела дежурстава... <h3>
+    <h3> Одавде се врши и логовање... </h3>
+  
+  </div>
+</div>
