--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/me.css">
+		<link rel='stylesheet' type='tex/css' href='css/css800px.css' media='screen and (max-width: 800px)'>
 	</head>
 	
 	<body>
