--- a/indexTabele.html
+++ b/indexTabele.html
@@ -23,8 +23,8 @@
 		</div>
 		
 		<div id="main-container">
-			<div id="top"> 
-					<button id="log_in" class="btn btn-primary" type="button" > Пријављивање </button>
+			<div id="top" > 
+					<button class="btn btn-primary" type="button" > Пријављивање </button>
 			</div>
 			<div class="forme_dezurstava" ng-show="tab ===1">
 				<table class="table table-striped" ng-controller="AppointmentsController">
