--- a/pages/info.html
+++ b/pages/info.html
@@ -6,6 +6,7 @@
 
 <!-- TODO: deaktiviraj submit dugme dok se ne popuni makar jedno polje forme -->
 
+<div ng-controller="infoControler">
 <div class="forme_dezurstava">
   <p class="imenaFormi"> Опште информације </p>
   
@@ -44,3 +45,4 @@
   </form>	
 
 </div> <!-- forme dezurstva -->
+</div>
