--- a/pages/newuser.html
+++ b/pages/newuser.html
@@ -13,7 +13,7 @@
     dugme za reset unosa
 -->
 
-<div ng-controler="newUserControler">
+<div ng-controller="newUserControler">
   <div class="forme_dezurstava">
     
     <p class="imenaFormi"> Додавање новог корисника</p>
