--- a/indexTabele.html
+++ b/indexTabele.html
@@ -3,16 +3,19 @@
 	<head>
 		<title> МАТФ Дежурства</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8;" />
-		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/angular.min.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
-		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/me.css"> 
 	</head>
 	
 	<body>
 	<div id="content">
+	
+
+	
+	<!-- -->
 		<div id="tab-container">
 			<section ng-init="tab = 1 ">
 				<ul class="nav nav-pills nav-stacked">
@@ -24,7 +27,7 @@
 		
 		<div id="main-container">
 			<div id="top" > 
-					<button class="btn btn-primary" type="button" > Пријављивање </button>
+					<button class="btn btn-primary" type="button" ng-click="setVisible(true)"> Пријављивање </button>
 			</div>
 			<div class="forme_dezurstava" ng-show="tab ===1">
 				<table class="table table-striped" ng-controller="AppointmentsController">
@@ -43,7 +46,7 @@
 						<td>Aсистент</td><td>Број сати дежурства</td>
 					</tr>
 					<tr ng-repeat="row in totalHoursOfDuty">
-						<td><a href="">{{row.assistant}}</a></td><td>{{row.hours}}</td>
+						<td><a href="" ng-click="">{{row.assistant}}</a></td><td>{{row.hours}}</td>
 					</tr>
 				</table>
 			</div>
