--- a/pages/administrator/ucionice.html
+++ b/pages/administrator/ucionice.html
@@ -13,9 +13,9 @@ tab sa informacijama o ucionicama i njihovim kapacitetima:
     <table class="table table-striped table-hover" ng-init="sort='datum'; reverse=false">
       <thead>
 	<tr>
-	  <th ng-click="sort='ime'; reverse=!reverse">Име сале</th>
-	  <th ng-click="sort='kapacitet'; reverse=!reverse">Капацитет сале</th>
-	  <th ng-click="sort='racunari'; reverse=!reverse">Расположиви рачунари</th>
+	  <th ng-click="sort='ime'; reverse=!reverse" title="Кликните за сортирање по имену сале.">Име сале</th>
+	  <th ng-click="sort='kapacitet'; reverse=!reverse" title="Кликните за сортирање по капацитету сале.">Капацитет сале</th>
+	  <th ng-click="sort='racunari'; reverse=!reverse" title="Кликните за сортирање по броју расположивих рачунара.">Расположиви рачунари</th>
 	  <th>Опције</th>
 	</tr>
       </thead>
