--- a/pages/administrator/deleteuser.html
+++ b/pages/administrator/deleteuser.html
@@ -25,8 +25,8 @@
     <table class="table table-striped table-hover" ng-init="sort='imeprezime'; reverse=false">
       <thead>
 	<tr>
-	  <th ng-click="sort='imeprezime'; reverse=!reverse">Име и Презиме</th>
-	  <th ng-click="sort='status'; reverse=!reverse">Статус</th>
+	  <th ng-click="sort='imeprezime'; reverse=!reverse" title="Кликните за сортирање по имену и презимену корисника.">Име и Презиме</th>
+	  <th ng-click="sort='status'; reverse=!reverse" title="Кликните за сортирање по статусу корисника.">Статус</th>
 	  <th>Опције</th>
 	</tr>
       </thead>
