reset tab za administratora

--- a/pages/administrator/newuser.html
+++ b/pages/administrator/newuser.html
@@ -130,7 +130,7 @@
 	<div class="form-group">
 	  <label class="col-lg-2 control-label">Коефицијент ангажовања</label>
 	  <div class="col-lg-10">
-	    <input type="number" class="form-control" name="inputKoeficijent" ng-model="formData.koeficijent" placeholder="Коефицијент ангажовања 0-100%" ng-required="true">
+	    <input type="number" min="0" max="100" class="form-control" name="inputKoeficijent" ng-model="formData.koeficijent" placeholder="Коефицијент ангажовања 0-100%" ng-required="true">
 	  </div>
 	</div>
 
