--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 		<script type="text/javascript" src="js/app.js"></script>
 		
 		<script type="text/javascript" src="js/controllers.js"></script>
+		<script type="text/javascript" src="js/administrator.js"></script>
+		<script type="text/javascript" src="js/koordinator.js"></script>
+		<script type="text/javascript" src="js/publicpages.js"></script>
+		<script type="text/javascript" src="js/assistant.js"></script>
+		
 		<script type="text/javascript" src="js/directives.js"></script>
 		
 <!-- 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script> -->
