--- a/assistant.html
+++ b/assistant.html
@@ -129,7 +129,7 @@
 			      <div class="form-group" >
 							<label  class="col-lg-2 control-label">Број група</label>
 							<div class="col-lg-8">
-							<input type="number" class="form-control" name="brGrupa" ng-model="brGrupa"  ng-required="true" >
+							<input type="number" min="0" class="form-control" name="brGrupa" ng-model="brGrupa"  ng-required="true" >
 							</div>
 						</div>
 	
