--- a/organizer.html
+++ b/organizer.html
@@ -3,13 +3,17 @@
 	<head>
 		<title> MАТФ Дежурства </title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8;" />
-				<script type="text/javascript" src="js/jquery-1.11.2.min.js"> </script>
+
+		<script type="text/javascript" src="js/jquery-1.11.2.min.js"> </script>
 		<script type="text/javascript" src="js/angular.min.js"></script>
 		<script type="text/javascript" src="js/angular.js"></script>
+		<script type='text/javascript' src='js/angular-route.min.js'> </script>
+		<script type="text/javascript" src="js/bootstrap.min.js"></script>
+		
 		<script type="text/javascript" src="js/assistant.js"></script>
-		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"> 
-		<link rel="stylesheet" type="text/css" href="css/me.css"> 
+		
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="css/me.css">
 	</head>
 	
 	<body>
