sredjivanje rasporeda obaveza

--- a/pages/administrator/deleteuser.html
+++ b/pages/administrator/deleteuser.html
@@ -32,7 +32,7 @@
       </thead>
       <tbody>
 	<tr ng-repeat="korisnik in korisnici | orderBy:sort:reverse">
-	  <td>{{ korisnik.imeprezime }}</td> 
+	  <td><a href="">{{ korisnik.imeprezime }}</a></td> 
 	  <td>{{ korisnik.status }}</td>
 	  <td><button type="submit" class="btn btn-primary btn-sm" ng-click="promeniStatus(korisnik.imeprezime)" title="Кориснику ће бити промењен статус.">Промени статус</button></td>
 	</tr>
